worked on object basics exercises

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MDN - Practices</title>
 
 </head>
 
@@ -74,10 +74,44 @@
 -->
 
 <!-- ******************** sumOfTripledEvens using map, filter and reduce ******************** -->
-
-<body>
+<!-- <body>
     <h1>sumOfTripledEvens</h1>
     <script src="sumOfTripledEvens.js"></script>
-</body>
+</body -->
+
+<!-- ******************** Active Learning: Map To Names ******************** -->
+
+<!-- <body>
+    <h1>Map To Names</h1>
+    <script src="mapToNames.js"></script>
+</body -->
+
+<!-- ******************** Active Learning: Map To Objects ******************** -->
+
+<!-- <body>
+    <h1>Map To Objects</h1>
+    <script src="mapToObjects.js"></script>
+</body -->
+
+<!-- ******************** Active Learning: Sort Users By Age ******************** -->
+
+<!-- <body>
+    <h1>Sort Users By Age</h1>
+    <script src="sortUsersByAge.js"></script>
+</body -->
+
+<!-- ******************** Active Learning: Get Average Age ******************** -->
+
+<!-- <body>
+    <h1>Get Average Age</h1>
+    <script src="getAverageAge.js"></script>
+</body -->
+
+<!-- ******************** Active Learning: Create Keyed Object From Array ******************** -->
+
+<!-- <body>
+    <h1>Keyed Object From Array</h1>
+    <script src="keyedObject.js"></script>
+</body -->
 
 </html>
